--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#cc0033"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
